# ModSyncNext2

./: bun.lockb  index.html  package.json  sample_config.toml  vite.config.ts
src/: App.vue  config.ts  main.ts
src-tauri/: Cargo.toml  sample_config.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Config.vue  ConfigPage.vue  Greet.vue  Main.vue
src/components/ConfigPage/: index.vue
src/components/ConfigPage/hooks/: useTempConfig.ts
src/store/: config.ts
