[package]
name = "modsyncnext2"
version = "0.0.0"
description = "Mod Sync Next 2"
authors = ["Light_Quanta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.5"
toml = "0.8.15"
rfd = "0.14.1"
dotenvy = "0.15.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
